2007-11-01  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/base.py (OneLineMixin.make_line): tolerate
	results == None (i.e. when the build hasn't finished yet);
	previously this code exploded when trying to find a CSS class for
	that results value. Patch from Greg Ward. Closes #118.

	* buildbot/status/client.py (RemoteBuildStep.remote_getLogs):
	IBuildStepStatus.getLogs() returns a list, not a dict. Patch from
	Fabrice Crestois. Closes #121.

2007-10-31  Brian Warner  <warner@lothar.com>

	* buildbot/status/words.py (Contact.emit_status): if there's no
	current step, don't try to display its description. This should
	fix the crash when asking the irc bot about builds which are
	waiting for a build-wide Lock. Closes #96.

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): add
	'columnName' argument, from a patch by Ben Hearsum. Closes #120.

2007-10-16  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/slaves.py (BuildSlavesResource.body): fix
	timestamp, I was using %M (minutes) where I meant to be using
	%b (abbreviated month name). Closes #109.

2007-10-13  Brian Warner  <warner@lothar.com>

	* README (COPYING): make it clear that buildbot is distributed under
	the GPL (version 2)
	* COPYING: add a copy of the GPLv2 to the source tree
	* MANIFEST.in: .. and to the source distribution too

2007-10-10  Brian Warner  <warner@lothar.com>

	* buildbot/status/builder.py (Status.getURLForThing): update this
	to match new URL layout, I completely forgot about it. Closes #112.
	* buildbot/test/test_web.py (GetURL): add unit tests

	* buildbot/status/web/build.py (BuildsResource.getChild): fix
	silly typo which prevented the Build page from ever offering
	control options like 'Stop Build'. Thanks to Aaron Hsieh for the
	catch. Closes #114.
	* buildbot/test/test_webparts.py (Webparts._do_page_tests): it'd
	be nice to test this

	* buildbot/__init__.py (version): bump to 0.7.6+ while between
	releases
	* docs/buildbot.texinfo: same
